syntax="proto3";

package proto;
option go_package = "./;proto";

import "mom_common.proto";
import "production_line.proto";
import "product_order.proto";

message ProductReworkRecordInfo {
	//ID 
 	string id=2;
	//生产工站ID 
    string productionStationID=3;
    ProductionStationInfo productionStation=17;
	//生产工序ID 
    string productionProcessID=4;
	//产品信息ID 
    string productInfoID=5;
    ProductInfoInfo productInfo=18;
	//返工人员ID 
    string createUserID=6;
	//创建时间 
 	string createTime=7;
	//返工原因 
 	string reworkReason=8;
	//返工类型ID 
    string productReworkTypeID=9;
	//返工原因ID 
    string productReworkCauseID=10;
	//返工方案ID 
    string productReworkSolutionID=11;
	//返工简述 
 	string reworkBrief=12;
	//返工人员ID 
    string reworkUserID=13;
	//返工时间 
 	string reworkTime=14;
	//完成时间 
 	string completeTime=15;
	//备注 
 	string remark=16;
}

message QueryProductReworkRecordRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=3;
	//生产产线ID
    // @inject_tag: uri:"productionLineID" form:"productionLineID"
    string productionLineID=4;
    //产品序列号
    // @inject_tag: uri:"productSerialNo" form:"productSerialNo"
    string productSerialNo=5;
    //生产工单号
    // @inject_tag: uri:"productOrderNo" form:"productOrderNo"
    string productOrderNo=6;
	//创建时间开始
    // @inject_tag: uri:"createTime0" form:"createTime0"
    string createTime0=7;
	//创建时间结束
    // @inject_tag: uri:"createTime1" form:"createTime1"
    string createTime1=8;
	//故障信息
	// @inject_tag: uri:"reworkBrief" form:"reworkBrief"
	string reworkBrief=9;
}

message QueryProductReworkRecordResponse{
    Code code=1;
    string message=2;
    repeated ProductReworkRecordInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllProductReworkRecordResponse{
    Code code=1;
    string message=2;
    repeated ProductReworkRecordInfo data=3;
}

message GetProductReworkRecordDetailResponse{
    Code code=1;
    string message=2;
    ProductReworkRecordInfo data=3;
}